Instance API can filter/sort by billing_provider
- added billingProvider to Host record and added table.
- support filtering Instance API results by billing_provider
- support sorting Instance API results by billing_provider
- added billing_provider to the InstanceData in API response.
