# api/rhsm-subscriptions-api-spec.yaml
@@ -689,6 +689,11 @@ paths:
           schema:
             $ref: '#/components/schemas/UsageType'
           description: "Include only hosts for the specified usage level."
+        - name: billing_provider
+          in: query
+          schema:
+            $ref: '#/components/schemas/BillingProviderType'
+          description: "Include only hosts for the specified billing provider."
         - name: display_name_contains
           description: Include only hosts containing the specified display name. Passing an empty string behaves the same way as passing null
           schema:
@@ -966,6 +971,9 @@ components:
     UsageType:
       type: string
       enum: [ "", Production, Development/Test, Disaster Recovery, _ANY ]
+    BillingProviderType:
+      type: string
+      enum: [red hat, aws, gcp, azure, oracle]
     ProductId:
       type: string
       enum:
@@ -1507,6 +1515,8 @@ components:
           $ref: '#/components/schemas/ServiceLevelType'
         usage:
           $ref: '#/components/schemas/UsageType'
+        billing_provider:
+          $ref: '#/components/schemas/BillingProviderType'
         measurements:
           type: array
           items:
@@ -1564,6 +1574,7 @@ components:
         - Instance-hours
         - Storage-gibibytes
         - Transfer-gibibytes
+        - billing_provider
     InstanceData:
       title: Root Type for Instance
       description: The representation of a product cluster data
@@ -1573,6 +1584,8 @@ components:
           type: string
         display_name:
           type: string
+        billing_provider:
+          $ref: '#/components/schemas/BillingProviderType'
         measurements:
           description: >-
             Must be in the same order as "measurements" in the meta. (i.e. in the example
